# feather

./: .gitignore  Cargo.toml  shell.nix
nix/: sources.json
src/: hittable.rs  main.rs  pixel.rs  ray.rs  sphere.rs
