[package]
name = "rayzor"
version = "0.1.0"
authors = ["Bernardo Meurer <meurerbernardo@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
indicatif = { version = "0.14.0", features = ["with_rayon"] }
nalgebra = "0.21.0"
rayon = "1.3.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
